--- a/theme/templates/pages/community.html
+++ b/theme/templates/pages/community.html
@@ -76,7 +76,7 @@
                                     <div id="search-container" class="input-group">
                                         <span class="glyphicon glyphicon-search search-icon"></span>
                                         <input id="resource-search-input" type="text" class="form-control"
-                                               placeholder="Search"/>
+                                               placeholder="Search" size="600px" />
                                         <span id="btn-clear-search-input"
                                               class="glyphicon glyphicon-remove-sign btn-clear-search"></span>
                                     </div>
