--- a/theme/templates/pages/community.html
+++ b/theme/templates/pages/community.html
@@ -1,6 +1,6 @@
 {% extends "pages/page.html" %}
 {% load comment_tags %}
-
+{#TODO when there is no community don't crash#}
 {% block extra_css %}
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.dataTables.min.css">
 {% endblock %}
