access time display

--- a/hs_manish/templates/user_stats.html
+++ b/hs_manish/templates/user_stats.html
@@ -15,7 +15,7 @@
                                 <p> <span style="font-weight:bold"> Type of Resource </span> {{res.resource_type}} </p>
 
                                 <p> <span style="font-weight:bold" > Accessed: </span>
-                                 {{ res.time }} </p>
+                                 {{ res.access_time }} </p>
                                 <p>{{res.value}} {{res.count}} times since {{res.first_accessed}}</p>
 
                                 </div>
