--- a/hs_manish/templates/user_stats.html
+++ b/hs_manish/templates/user_stats.html
@@ -13,7 +13,7 @@
                                 <p> Resource Name:<span style="font-weight:bold"> {{res.title}} ||  </a>
                                 <span style="font-weight:bold" > Counts: </span> {{res.count}}   </p>
                                 <p> <span style="font-weight:bold"> Type of Resource </span> {{res.resource_type}} </p>
-
+                                <p> <span style="font-weight:bold"> Access Type: </span> {{res.access_type}} </p>
                                 <p> <span style="font-weight:bold" > Accessed: </span>
                                  {{ res.access_time }} </p>
                                 <p>{{res.value}} {{res.count}} times since {{res.first_accessed}}</p>
