changes after review feedback: url routing, dashboard layout

--- a/theme/templates/includes/big_image_button_app.html
+++ b/theme/templates/includes/big_image_button_app.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+<div class="col-xs-12 col-lg-6">
     <div class="img-div">
         <img class="img-circle app-img" src="{{ app_image }}" alt="">
     </div>
