--- a/theme/static/css/dashboard.css
+++ b/theme/static/css/dashboard.css
@@ -7,7 +7,8 @@ Also hold the RA (recently accessed) table.
     border-radius: 4px;
     border: solid 1px rgba(221, 221, 221, .3);
     margin-bottom: 50px;
-    padding-bottom: 50px
+    padding-bottom: 50px;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.16);
 }
 
 /*
@@ -87,3 +88,4 @@ the brief for the app
 .app-text-block-brief {
     max-width: 320px;
 }
+
