Remove grantor text

--- a/theme/templates/pages/community.html
+++ b/theme/templates/pages/community.html
@@ -60,7 +60,7 @@
                                             </ul>
                                         </div>
                                         <div id="grantors-list">
-                                            GRANTOR.ID
+{#                                            GRANTOR.ID#}
                                             {#                                                {% for res in group_resources %}#}
                                             {#                                                    <span data-grantor-id="{{ res.grantor.id }}"#}
                                             {#                                                          data-grantor-name="{{ res.grantor|best_name }}"></span>#}
