--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -48,9 +48,9 @@
                         aria-hidden="true">&times;</span></button>
                 {% if missing_metadata_elements %}
                     {% if just_created %}
-                        <strong>Congratulations! </strong>
-                        <span>Now that your resource has been created the following metadata are still required to
-                            {% if cm.resource_type != 'ToolResource' %}publish it or {% endif %}make it public or discoverable:</span>
+                        This is the landing page for the resource you just created. Add files in the content area below
+                        and enter metadata where needed. The following metadata is required for your resource to be
+                        {% if cm.resource_type != 'ToolResource' %} published or{% endif %} made public:
                     {% else %}
                         <span>The following metadata are still required to
                             {% if cm.resource_type != 'ToolResource' %}publish the resource or {% endif %}make the resource public or discoverable:</span>
