[#2405] replacing metadata_form in templates for resource mode

--- a/theme/templates/resource-landing-page/abstract.html
+++ b/theme/templates/resource-landing-page/abstract.html
@@ -1,4 +1,4 @@
-{% if not metadata_form %}
+{% if not resource_edit_mode %}
     {% if abstract %}
         <div class="col-xs-12 content-block">
             <h3>Abstract</h3>
