--- a/theme/templates/resource-landing-page/subject.html
+++ b/theme/templates/resource-landing-page/subject.html
@@ -1,5 +1,5 @@
 {#        ======= Subject Keywords =======#}
-{% if not metadata_form %}
+{% if not resource_edit_mode %}
     {% if keywords %}
     <div class="col-xs-12 content-block">
         <h3>Subject Keywords</h3>
