--- a/theme/templates/resource-landing-page/additional-metadata.html
+++ b/theme/templates/resource-landing-page/additional-metadata.html
@@ -1,8 +1,8 @@
 <!-- ========= EXTRA METADATA TAB ========= -->
-{% if metadata_form or page.get_content_model.extra_metadata.items|length > 0 %}
+{% if resource_edit_mode or page.get_content_model.extra_metadata.items|length > 0 %}
     <div class="col-xs-12 content-block">
         <h3>Additional Metadata
-        {% if metadata_form %}
+        {% if resource_edit_mode %}
             <a id="btn-add-new-entry" type="button" class="btn btn-success btn-xs" title="Add New Entry">
                 <i class="fa fa-plus"></i>
             </a>
@@ -13,7 +13,7 @@
             <tr>
                 <th>Name</th>
                 <th>Value</th>
-                {% if metadata_form %}
+                {% if resource_edit_mode %}
                     <th></th>
                 {% endif %}
             </tr>
@@ -27,7 +27,7 @@
                     <td>
                         {{ extra_meta_value|urlize }}
                     </td>
-                    {% if metadata_form %}
+                    {% if resource_edit_mode %}
                         <td>
                             <span data-loop-counter="{{ forloop.counter0 }}"
                                class="glyphicon glyphicon-pencil icon-blue icon-button btn-edit-extra-metadata table-icon"
