--- a/theme/templates/resource-landing-page/resource-header.html
+++ b/theme/templates/resource-landing-page/resource-header.html
@@ -6,7 +6,7 @@
             <table id="left-header-table" class="info-table">
                 <tr>
                     <th>Authors:</th>
-                    {% if not metadata_form %}
+                    {% if not resource_edit_mode %}
                         <td class="authors-wrapper">
                             {% for author in creators %}
                                 {% include "includes/author-link.html" with author=author %}
