--- a/theme/templates/resource-landing-page/references.html
+++ b/theme/templates/resource-landing-page/references.html
@@ -83,10 +83,10 @@ If this resource was derived from another resource, click this button to create 
             </div>
         </div>
 
-        {% if source_formset.initial|length > 0 %}
+        {% if sources %}
         <table class="table hs-table">
             <tbody>
-            {% for source in source_formset.initial %}
+            {% for source in sources %}
                 <tr>
                     <td scope="row" class="dataset-label">Derived From:</td>
                     <td class="dataset-details">{{ source.derived_from|urlize }}</td>
@@ -134,10 +134,10 @@ Click this button to add a relationship to another resource, external website, o
             </div>
         </div>
 
-        {% if relation_formset.initial %}
+        {% if relations %}
         <table class="table hs-table">
             <tbody>
-            {% for relation in relation_formset.initial %}
+            {% for relation in relations %}
                 {% if  relation.type|lower != "haspart" %}
                     <tr>
                         <td scope="row" class="dataset-label">
